force-app/main/default/objects/Quote/fields/Primary_Quote__c.field-meta.xml
<CustomField>
    <fullName>Primary_Quote__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>