force-app/main/default/objects/Quote/fields/Quoted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Amount__c</fullName>
    <label>Quoted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>