force-app/main/default/objects/Quote/validationRules/Approval_Requires_Approver.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_Requires_Approver</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status,&quot;Submitted for Approval&quot;),
ISBLANK(Approver__c))</errorConditionFormula>
    <errorDisplayField>Approver__c</errorDisplayField>
    <errorMessage>You need to designate an approver in order to submit for approval</errorMessage>
</ValidationRule>