force-app/main/default/objects/Quote/validationRules/Primary_Quote_Approval_Submission.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Quote_Approval_Submission</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Status, &quot;Submitted for Approval&quot;),
Primary_Quote__c = FALSE)</errorConditionFormula>
    <errorMessage>Only Primary Quotes can be submitted for approval</errorMessage>
</ValidationRule>