force-app/main/default/objects/Quote/validationRules/Quote_Requires_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Requires_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(PRIORVALUE(Status)) == &quot;Under Review&quot;,
ISCHANGED(Status),
NOT(ISPICKVAL(Status,&quot;Submitted for Approval&quot;)))</errorConditionFormula>
    <errorMessage>You need to submit your quote for approval</errorMessage>
</ValidationRule>