force-app/main/default/objects/Quote/validationRules/Uploaded_Documents_Required_for_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Uploaded_Documents_Required_for_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Status,&quot;Submitted for Approval&quot;),
Documents_Uploaded__c = FALSE)</errorConditionFormula>
    <errorMessage>An approval can not be submitted without uploaded documents</errorMessage>
</ValidationRule>