force-app/main/default/objects/Quote/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Primary_Quote__c</columns>
    <columns>Quoted_Amount__c</columns>
    <columns>Cost__c</columns>
    <columns>Margin__c</columns>
    <columns>Approver__c</columns>
    <columns>CreatedBy</columns>
    <filterScope>Everything</filterScope>
    <label>All Quotes</label>
</ListView>